# adsbx

./: .gitignore  Cargo.toml  README.md  schema.sql
.sqlx/: query-603c76fdcb139637460584626b2844bc05311cee575bdf08197cab07caf409af.json  query-ec9eb6c85c41d43c87c7f19c4035e20282bc8207b37a63585d87272622b65622.json
docs/: CODE_GUIDE.md  DESIGN.md
examples/: publish.rs
migrations/: 20260627183814_create_raw_adsb_records.sql
scripts/: gen_testfile.py
src/: aggregator.rs  app.rs  config.rs  cpr.rs  decode.rs  dedup.rs  domain.rs  downsampler.rs  engine.rs  main.rs  metrics.rs  pipeline.rs  receiver.rs  state.rs  time.rs  wire.rs  writer.rs
tools/coord_viewer/: README.md  build_notebook.py  coord_viewer.ipynb  requirements.txt
