[package]
name = "adsbx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
rs1090 = "0.4"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
